<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".ListLots">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/listLotsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/list_parking_lots"
            android:textColor="#EDEFF1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider5"
            android:layout_width="363dp"
            android:layout_height="3dp"
            android:background="#7A0D0E11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listLotsTextView" />

        <Button
            android:id="@+id/listLotsButtonL13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="#347970"
            android:text="@string/lot_13"
            android:textColor="#EDEFF1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

        <Button
            android:id="@+id/listLotsButtonG13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#347970"
            android:text="@string/g13"
            android:textColor="#EDEFF1"
            app:layout_constraintEnd_toEndOf="@+id/listLotsButtonL13"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/listLotsButtonL13"
            app:layout_constraintTop_toBottomOf="@+id/listLotsButtonL13" />

        <Button
            android:id="@+id/listLotsButtonG14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#347970"
            android:text="@string/g14"
            android:textColor="#EDEFF1"
            app:layout_constraintEnd_toEndOf="@+id/listLotsButtonG13"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/listLotsButtonG13"
            app:layout_constraintTop_toBottomOf="@+id/listLotsButtonG13" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>